--- a/reports/report.html
+++ b/reports/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22813],[],[[4,0,0,[],[1,122,22691],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,8289],[],[[4,0,0,[],[0,117,8171,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Prp-Test-01","*C:\\Users\\BKU.SE\\Desktop\\SpectralEngines\\Testing\\Testautomation\\testautomation-e2e\\Tests\\prp-test-01.robot","*../Tests/prp-test-01.robot","*Open_Application"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Prp-Test-01","*C:\\Users\\BKU.SE\\Desktop\\SpectralEngines\\Testing\\Testautomation\\testautomation-e2e\\Tests\\prp-test-01.robot","*../Tests/prp-test-01.robot","*Open_Application","*MaxRetryError: HTTPConnectionPool(host='127.0.0.1', port=4724): Max retries exceeded with url: /session (Caused by NewConnectionError('&lt;urllib3.connection.HTTPConnection object at 0x000001ED92652690&gt;: Failed to establish a new connection: [WinError 10061] Es konnte keine Verbindung hergestellt werden, da der Zielcomputer die Verbindung verweigerte'))"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Prp-Test-01","name":"Prp-Test-01","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:08","fail":1,"id":"s1","label":"Prp-Test-01","name":"Prp-Test-01","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699965747702;
+window.output["baseMillis"] = 1699960199480;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22848;
+window.output["generated"] = 8294;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
