--- a/Output/report.html
+++ b/Output/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22813],[],[[4,0,0,[],[1,122,22691],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,141],[],[[4,0,0,[],[0,141,0,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Prp-Test-01","*C:\\Users\\BKU.SE\\Desktop\\SpectralEngines\\Testing\\Testautomation\\testautomation-e2e\\Tests\\prp-test-01.robot","*../Tests/prp-test-01.robot","*Open_Application"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*C:\\Users\\BKU.SE\\Desktop\\SpectralEngines\\Testing\\Testautomation\\testautomation-e2e\\Tests\\Login.robot","*../Tests/Login.robot","*Open_Application","*Resolving variable '${{ HTTP_DEVICE }}' failed: Evaluating expression 'HTTP_DEVICE' failed: NameError: name 'HTTP_DEVICE' is not defined nor importable as module"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Prp-Test-01","name":"Prp-Test-01","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Login","name":"Login","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699965747702;
+window.output["baseMillis"] = 1700228491731;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22848;
+window.output["generated"] = 154;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
